fix: sidebar logo display on Safari

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -137,17 +137,27 @@
   position: relative;
   padding-top: 20px;
   padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .sidebar-title-container {
+    flex: 1 1;
+  }
+
+  .sidebar-logo {
+    flex: 0 1 46px;
+  }
 }
 
 .sidebar-logo {
-  position: absolute;
-  right: 0;
-  bottom: 24px;
-  height: calc(100% - 40px);
+  height: 48px;
 
   svg {
     width: 100%;
     height: 100%;
+
+    opacity: 0.8;
   }
 }
 
@@ -237,6 +247,9 @@
 }
 
 .narrow-sidebar {
+  .sidebar-header {
+    display: block;
+  }
 
   .sidebar-title,
   .sidebar-sub-title {
@@ -247,11 +260,8 @@
     position: relative;
     display: flex;
     justify-content: center;
-    height: calc(100% - 22px);
-
-    svg {
-      opacity: 0.7;
-    }
+    height: calc(100% - 20px);
+    flex: inherit;
   }
 
   .sidebar-header-bar {
